--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rollup-plugin-visualizer": "^5.11.0",
     "typescript": "^5.3.3",
     "unocss": "^0.58.0",
+    "unplugin-imagemin": "^0.5.15",
     "vite": "^5.0.10",
     "vite-plugin-solid": "^2.8.0"
   }
