--- a/package.json
+++ b/package.json
@@ -13,18 +13,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@solidjs/router": "^0.10.5",
-    "alova": "^2.16.1",
-    "solid-js": "^1.8.7"
+    "@solidjs/router": "^0.10.10",
+    "@tencent/tmga-h5-sdk": "^0.0.5",
+    "axios": "^1.6.7",
+    "js-base64": "^3.7.6",
+    "js-cookie": "^3.0.5",
+    "lodash": "npm:lodash-es@^4.17.21",
+    "solid-js": "^1.8.12"
   },
   "devDependencies": {
-    "@tencent/unocss-wml-preset": "^0.1.4",
+    "@tencent/unocss-wml-preset": "^0.1.6",
+    "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.14.202",
     "less": "^4.2.0",
-    "rollup-plugin-visualizer": "^5.11.0",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.3.3",
-    "unocss": "^0.58.0",
-    "unplugin-imagemin": "^0.5.15",
-    "vite": "^5.0.10",
-    "vite-plugin-solid": "^2.8.0"
+    "unocss": "^0.58.4",
+    "unplugin-imagemin": "0.5.15",
+    "vite": "^5.0.12",
+    "vite-plugin-solid": "^2.9.1"
   }
 }
