--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@solidjs/router": "^0.13.5",
     "@thinke/toast": "^1.2.2",
+    "dayjs": "^1.11.11",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
     "ky": "^1.3.0",
@@ -23,12 +24,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.20.0",
-    "@thinke/unocss-wml-preset": "^0.1.11",
+    "@thinke/unocss-wml-preset": "^1.0.0",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.4",
     "@unocss/eslint-plugin": "^0.60.4",
     "@vitejs/plugin-legacy": "^5.4.1",
-    "eslint": "^9.1.1",
+    "eslint": "^9.4.0",
     "eslint-plugin-format": "^0.1.1",
     "less": "^4.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
