--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "dev:rdm": "vite --mode rdm",
     "build:rdm": "vite build --mode rdm",
-    "dev": "vite",
-    "build": "vite build",
+    "dev:prod": "vite --mode prod",
+    "build:prod": "vite build --mode prod",
     "check:ts": "tsc",
     "preview": "vite preview"
   },
@@ -35,7 +35,9 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.5.4",
     "unocss": "^0.61.9",
+    "unplugin-inject-preload": "^2.0.5",
     "vite": "^5.3.5",
+    "vite-plugin-singlefile": "^2.0.2",
     "vite-plugin-solid": "^2.10.2"
   }
 }
