--- a/package.json
+++ b/package.json
@@ -10,33 +10,41 @@
     "dev:prod": "vite --mode prod",
     "build:prod": "vite build --mode prod",
     "check:ts": "tsc",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "-----SSG-----": "",
+    "build:ssg": "npm run build:ssg-client && npm run build:ssg-server && cross-env NODE_ENV=production node dist/server.js",
+    "build:ssg-client": "cross-env BUILD_TYPE_VSR=ssr vite build",
+    "build:ssg-server": "cross-env BUILD_TYPE_VSR=ssr vite build --ssr",
+    "preview:ssg": "npx serve -l 12001 dist/public"
   },
   "dependencies": {
-    "@solidjs/router": "^0.14.1",
+    "@solidjs/meta": "^0.29.4",
+    "@solidjs/router": "^0.14.3",
     "@thinke/toast": "^1.2.2",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
-    "ky": "^1.5.0",
+    "ky": "^1.7.1",
     "lodash": "npm:lodash-es@^4.17.21",
-    "solid-js": "^1.8.19"
+    "solid-js": "^1.8.22"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.24.1",
+    "@antfu/eslint-config": "^3.0.0",
+    "@ssrx/vite": "^0.6.1",
     "@thinke/unocss-wml-preset": "^2.0.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.7",
-    "@unocss/eslint-plugin": "^0.61.9",
-    "@vitejs/plugin-legacy": "^5.4.1",
-    "eslint": "^9.8.0",
+    "@unocss/eslint-plugin": "^0.62.3",
+    "@vitejs/plugin-legacy": "^5.4.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.9.1",
     "eslint-plugin-format": "^0.1.2",
     "less": "^4.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.5.4",
-    "unocss": "^0.61.9",
+    "unocss": "^0.62.3",
     "unplugin-inject-preload": "^2.0.5",
-    "vite": "^5.3.5",
+    "vite": "^5.4.2",
     "vite-plugin-singlefile": "^2.0.2",
     "vite-plugin-solid": "^2.10.2"
   }
