--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.14.3",
+    "@tanstack/query-sync-storage-persister": "^5.53.2",
+    "@tanstack/solid-query": "^5.53.2",
+    "@tanstack/solid-query-persist-client": "^5.53.2",
     "@thinke/toast": "^1.2.2",
     "dayjs": "^1.11.13",
     "js-base64": "^3.7.7",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.0.0",
     "@ssrx/vite": "^0.6.1",
+    "@tanstack/solid-query-devtools": "^5.54.0",
     "@thinke/unocss-wml-preset": "^2.0.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.7",
@@ -46,6 +50,7 @@
     "unplugin-inject-preload": "^2.0.5",
     "vite": "^5.4.2",
     "vite-plugin-singlefile": "^2.0.2",
-    "vite-plugin-solid": "^2.10.2"
+    "vite-plugin-solid": "^2.10.2",
+    "vite-tsconfig-paths": "^5.0.1"
   }
 }
