--- a/package.json
+++ b/package.json
@@ -6,51 +6,49 @@
   "description": "description",
   "scripts": {
     "dev:rdm": "vite --mode rdm",
-    "build:rdm": "vite build --mode rdm",
+    "build:test": "vite build --mode rdm",
+    "build:rdm": "sh build.sh rdm",
+    "build:prod": "sh build.sh prod",
     "dev:prod": "vite --mode prod",
-    "build:prod": "vite build --mode prod",
     "check:ts": "tsc",
     "preview": "vite preview",
+    "preview:ssg": "vite preview  --outDir ./dist/public",
     "-----SSG-----": "",
-    "build:[example]": "npm run build:ssg-client -- --mode [example] && npm run build:ssg-server -- --mode [example] && cross-env NODE_ENV=production node dist/server.js",
-    "build:ssg": "npm run build:ssg-client && npm run build:ssg-server && cross-env NODE_ENV=production node dist/server.js",
     "build:ssg-client": "cross-env BUILD_TYPE_VSR=ssr vite build",
-    "build:ssg-server": "cross-env BUILD_TYPE_VSR=ssr vite build --ssr",
-    "preview:ssg": "npx serve -l 12001 dist/public"
+    "build:ssg-server": "cross-env BUILD_TYPE_VSR=ssr vite build --ssr"
   },
   "dependencies": {
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.14.3",
-    "@tanstack/query-sync-storage-persister": "^5.55.4",
-    "@tanstack/solid-query": "^5.55.4",
-    "@tanstack/solid-query-persist-client": "^5.55.4",
+    "@solidjs/router": "^0.14.8",
+    "@tanstack/query-sync-storage-persister": "^5.59.13",
+    "@tanstack/solid-query": "^5.59.13",
+    "@tanstack/solid-query-persist-client": "^5.59.13",
     "@thinke/toast": "^1.2.2",
     "dayjs": "^1.11.13",
+    "echarts": "^5.5.1",
     "js-base64": "^3.7.7",
     "js-cookie": "^3.0.5",
     "ky": "^1.7.2",
     "lodash": "npm:lodash-es@^4.17.21",
-    "solid-js": "^1.8.22"
+    "solid-js": "^1.9.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.5.1",
+    "@antfu/eslint-config": "^3.7.3",
     "@ssrx/vite": "^0.6.1",
-    "@tanstack/solid-query-devtools": "^5.55.4",
+    "@tanstack/solid-query-devtools": "^5.59.13",
     "@thinke/unocss-wml-preset": "^2.0.6",
     "@types/js-cookie": "^3.0.6",
-    "@types/lodash": "^4.17.7",
-    "@unocss/eslint-plugin": "^0.62.3",
+    "@types/lodash": "^4.17.10",
+    "@unocss/eslint-plugin": "^0.62.4",
     "@vitejs/plugin-legacy": "^5.4.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.10.0",
+    "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2",
     "less": "^4.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
-    "typescript": "^5.6.2",
-    "unocss": "^0.62.3",
-    "unplugin-inject-preload": "^2.0.5",
-    "vite": "^5.4.4",
-    "vite-plugin-singlefile": "^2.0.2",
+    "typescript": "^5.6.3",
+    "unocss": "^0.63.4",
+    "vite": "^5.4.9",
     "vite-plugin-solid": "^2.10.2",
     "vite-tsconfig-paths": "^5.0.1"
   },
